Fixing image display

--- a/code/3a  - Making Predictions with Selected Model Younger.ipynb
+++ b/code/3a  - Making Predictions with Selected Model Younger.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "In creating our model, we maximized 'accuracy' defined as the probability that using specific model features, we would correctly classify a voter of unknown sentiment as either leaning Republican or Democratic.  This is very useful if a randomly selected voter is queried about their demographics and we need to predict their sentiment.  However, the model has a serious flaw; it over-predicts republicans in order to achieve this accuracy.  Consider the following table, known as a 'confusion matrix'\n",
     "\n",
-    "<img src=\"files/confusion_matrix.jpg\">\n",
+    "<img src="files/confusion_matrix.jpg">\n",
     " \n",
     " Even though accuracy is 75%, there are a lower percentage of democrats correctly predicted as democrats (known as 'specificity': 69%) than republicans predicted as republican (known as 'recall' or 'sensitivity': 83%).  Therefore, if we used this raw model to make predictions on a large population, it would over-predict republicans. \n",
     " \n",
